# dslp-repo-template

./: .gitignore  pyproject.toml  sync2hpc.sh  sync2local.sh
slurm/: jupyter-lab.slurm
