[project]
name = "code"
authors = [{ name = "Janik Kokot", email = "janik.kokot@i-med.ac.at" }]
version = "0.1.0"
description = "A data science project package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Private" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "snakemake>=7.32.4",
]

[tool.setuptools]
package-dir = { "" = "code" }

[tool.setuptools.packages.find]
where = ["code"]
include = []
exclude = []
namespaces = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
